feat: Cleanup server (especially error handling) (#58)
* feat: Add tracing layer to server

* feat: Introduce ErrorResponse for errors

Miscellaneous other cleanup:

- Update state store trait to return Option<T> for get methods instead of errors.
  This let's us return a better HTTP error code for this case.
- Store execution input/result as ValueRef directly instead of blob IDs
- Replace ExecutionMetadata with ExecutionDetails to eliminate duplication
- Update database schema to use input_json/result_json columns
- Fix integration tests to use builtin://create_messages component
- Remove unused step_dependencies table migration
- Update both in-memory and SQLite state store implementations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,13 +55,13 @@ thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tower = "0.5"
-tower-http = { version = "0.6", features = ["cors"] }
+tower-http = { version = "0.6", features = ["cors", "trace"] }
 tracing = "0.1.41"
 tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time" ] }
 trait-variant = "0.1.2"
 url = { version = "2.5.4", features = ["serde"]}
-utoipa = { version = "5.3", features = ["axum_extras", "rc_schema", "url"] }
+utoipa = { version = "5.3", features = ["axum_extras", "rc_schema", "url", "uuid"] }
 utoipa-axum = "0.2"
 utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
 uuid = { version = "1.16.0", features = ["v4", "serde"]}
