--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -19,6 +19,7 @@ doctest = false
 chrono.workspace = true
 error-stack.workspace = true
 futures.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 stepflow-core.workspace = true
 thiserror.workspace = true
