--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -17,6 +17,7 @@ doctest = false
 
 [dependencies]
 bit-set.workspace = true
+chrono.workspace = true
 error-stack.workspace = true
 futures.workspace = true
 serde.workspace = true
