--- a/tests/mock/error_use_default.yaml
+++ b/tests/mock/error_use_default.yaml
@@ -1,6 +1,6 @@
-input_schema:
+inputSchema:
   type: object
-output_schema:
+outputSchema:
   type: object
   properties:
     result:
@@ -8,17 +8,17 @@ output_schema:
 steps:
 - id: error
   component: mock://error
-  input_schema: null
-  output_schema: null
-  on_error:
-    action: use_default
+  inputSchema: null
+  outputSchema: null
+  onError:
+    action: useDefault
   input:
     mode:
       $from:
         workflow: input
       path: mode
 output:
-  error_result:
+  errorResult:
     $from:
       step: error
 test:
@@ -29,12 +29,12 @@ test:
     output:
       outcome: success
       result:
-        error_result: null
+        errorResult: null
   - name: test success case
     input:
       mode: succeed
     output:
       outcome: success
       result:
-        error_result:
+        errorResult:
           output: succeeded
