--- a/crates/stepflow-analysis/Cargo.toml
+++ b/crates/stepflow-analysis/Cargo.toml
@@ -18,6 +18,7 @@ doctest = false
 [dependencies]
 bit-set.workspace = true
 error-stack.workspace = true
+indexmap.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
