--- a/crates/stepflow-server/Cargo.toml
+++ b/crates/stepflow-server/Cargo.toml
@@ -19,6 +19,7 @@ workspace = true
 axum.workspace = true
 chrono.workspace = true
 error-stack.workspace = true
+indexmap.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-analysis.workspace = true
