--- a/tests/mock/error_skip.yaml
+++ b/tests/mock/error_skip.yaml
@@ -1,6 +1,6 @@
-input_schema:
+inputSchema:
   type: object
-output_schema:
+outputSchema:
   type: object
   properties:
     result:
@@ -8,9 +8,9 @@ output_schema:
 steps:
 - id: error
   component: mock://error
-  input_schema: null
-  output_schema: null
-  on_error:
+  inputSchema: null
+  outputSchema: null
+  onError:
     action: skip
   input:
     mode:
@@ -18,7 +18,7 @@ steps:
         workflow: input
       path: mode
 output:
-  error_result:
+  errorResult:
     $from:
       step: error
     path: output
@@ -35,4 +35,4 @@ test:
     output:
       outcome: success
       result:
-        error_result: succeeded
+        errorResult: succeeded
