--- a/examples/file-loading/stepflow-config.yml
+++ b/examples/file-loading/stepflow-config.yml
@@ -3,5 +3,5 @@ plugins:
     type: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
-  - name: builtins
+  - name: builtin
     type: builtin
