--- a/tests/builtins/blob_test.yaml
+++ b/tests/builtins/blob_test.yaml
@@ -12,7 +12,7 @@ output_schema:
       type: object
 steps:
 - id: put_blob
-  component: builtins://put_blob
+  component: builtin://put_blob
   input_schema: null
   output_schema: null
   input:
@@ -21,7 +21,7 @@ steps:
         workflow: input
       path: data
 - id: get_blob
-  component: builtins://get_blob
+  component: builtin://get_blob
   input_schema: null
   output_schema: null
   input:
