feat: Implement write queue for state updates
- Enable non-blocking writes during execution by sending them to a queue
- Allow StateStore implementations to manage the queue and processing
  appropriately (eg., batching, etc.).
- Add write-through cache for value resolution so we "read our writes"
  without flushing the queue.
- Add workflow recovery logic to handle missed status transitions
  that can occur due to async write queue delays or system restarts.
- Remove lifetime from StepResult for queueing.
- Centralize dependency analysis and validation logic.
- Introduce StepId struct and encourage index based step access.

Recovery process:
1. Query completed step results from state store
2. Mark completed steps in dependency tracker
3. Identify steps that should be runnable based on dependencies
4. Fix status mismatches by updating blocked steps to runnable
5. Cache recovered step results for performance

--- a/crates/stepflow-state-sql/Cargo.toml
+++ b/crates/stepflow-state-sql/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
+bit-set.workspace = true
 chrono.workspace = true
 error-stack.workspace = true
 futures.workspace = true
