--- a/crates/stepflow-core/Cargo.toml
+++ b/crates/stepflow-core/Cargo.toml
@@ -18,6 +18,7 @@ doctest = false
 [dependencies]
 error-stack.workspace = true
 hex.workspace = true
+indexmap.workspace = true
 safer_owning_ref.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
