--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
+bit-set.workspace = true
 chrono.workspace = true
 error-stack.workspace = true
 futures.workspace = true
