--- a/tests/sql-state/stepflow-config.yml
+++ b/tests/sql-state/stepflow-config.yml
@@ -17,6 +17,9 @@ plugins:
           { value: "Testing execution state persistence" }:
             outcome: success
             result: { result: "Testing execution state persistence" }
+          { value: "Testing" }:
+            outcome: success
+            result: { result: "Testing" }
 
 # Use SQLite with in-memory database for testing
 state_store:
