--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -8,6 +8,9 @@ requires-python = ">=3.13"
 dependencies = [
     "msgspec>=0.19.0",
     "jsonschema>=4.17.0",
+    "pyaudio>=0.2.11",
+    "sounddevice",
+    "numpy",
 ]
 
 [dependency-groups]
