--- a/examples/file-loading/test-load.yaml
+++ b/examples/file-loading/test-load.yaml
@@ -5,8 +5,24 @@ steps:
   - id: load_sales_data
     component: "builtin://load_file"
     input:
-      path: "examples/data-pipeline/sales-data.json"
+      path: "test-data.json"
 
 output:
-  loaded_data: { $from: "load_sales_data", path: "data" }
-  file_metadata: { $from: "load_sales_data", path: "metadata" }
+  loaded_data: { $from: { step: "load_sales_data" }, path: "data" }
+  file_metadata: { $from: { step: "load_sales_data" }, path: "metadata" }
+
+test:
+  cases:
+  - name: load_test_data_file
+    description: Test loading JSON file with builtin load_file component
+    input: {}
+    output:
+      outcome: success
+      result:
+        loaded_data:
+          test: "data"
+          value: 42
+        file_metadata:
+          resolved_path: "../../examples/file-loading/test-data.json"
+          size_bytes: 29
+          format: "json"
