build: setup release-please and release builds
- `release_please.yml` runs on merge to main, and updates the release
  PRs.
- `release_rust.yml` runs when a `stepflow-rs` release is tagged and
  builds the binaries and docker images.
- `pr.yml` runs on PRs to main and verifies conventional commit titles.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ concurrency:
 env:
   CARGO_TERM_COLOR: always
 
+# TODO: Split into per-language custom actions and use https://github.com/dorny/paths-filter
+# to run actions only for affected packages.
 jobs:
   test:
     strategy:
