--- a/stepflow-rs/examples/data-pipeline/debug-pipeline.yaml
+++ b/stepflow-rs/examples/data-pipeline/debug-pipeline.yaml
@@ -16,18 +16,18 @@ steps:
   - id: calculate_total_revenue
     component: python://sum_field
     input:
-      data: { $from: { workflow: input }, path: "sales_data" }
+      input: { $from: { workflow: input }, path: "sales_data" }
       field: "revenue"
 
   - id: count_sales
     component: python://count_items
     input:
-      data: { $from: { workflow: input }, path: "sales_data" }
+      input: { $from: { workflow: input }, path: "sales_data" }
 
   - id: calculate_average_sale
     component: python://average_field
     input:
-      data: { $from: { workflow: input }, path: "sales_data" }
+      input: { $from: { workflow: input }, path: "sales_data" }
       field: "revenue"
 
   - id: calculate_performance_ratio
