--- a/stepflow-rs/tests/python/udf_simple.yaml
+++ b/stepflow-rs/tests/python/udf_simple.yaml
@@ -32,7 +32,7 @@ steps:
         required:
         - x
         - y
-      code: data['x'] + data['y']
+      code: input['x'] + input['y']
 - id: create_multiplication_blob
   component: builtin://put_blob
   input_schema: null
@@ -49,7 +49,7 @@ steps:
         required:
         - x
         - y
-      code: data['x'] * data['y']
+      code: input['x'] * input['y']
 - id: create_complex_calculation_blob
   component: builtin://put_blob
   input_schema: null
@@ -66,7 +66,7 @@ steps:
         required:
         - sum
         - product
-      code: math.sqrt(data['sum'] ** 2 + data['product'] ** 2)
+      code: math.sqrt(input['sum'] ** 2 + input['product'] ** 2)
 # Execute functions using blob_ids
 - id: simple_addition
   component: python://udf
