--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -7,7 +7,7 @@ permissions:
   contents: write
   pull-requests: write
 
-name: release-please
+name: Update Release PRs
 
 jobs:
   release-please:
