build: fix path to typescript SDK

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -14,7 +14,7 @@
             "include-component-in-tag": true
         },
         "stepflow-ts": {
-            "path": "sdks/ts",
+            "path": "sdks/typescript",
             "release-type": "node",
             "include-component-in-tag": true
         }
