build: fix release please manifest

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,5 @@
 {
     "stepflow-rs": "0.0.1",
-    "stepflow-py": "0.0.1",
-    "stepflow-ts": "0.0.1"
+    "sdks/py": "0.0.1",
+    "sdks/ts": "0.0.1"
 }
