--- a/crates/stepflow-protocol/Cargo.toml
+++ b/crates/stepflow-protocol/Cargo.toml
@@ -18,6 +18,7 @@ indexmap.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
+stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
