build: install git cliff from release

--- a/.github/workflows/release_prepare.yml
+++ b/.github/workflows/release_prepare.yml
@@ -41,7 +41,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Install git-cliff
-        run: cargo install git-cliff
+        uses: kenji-miyake/setup-git-cliff@v1
 
       - name: Configure git
         run: |
