build: release_prepare permissions

--- a/.github/workflows/release_prepare.yml
+++ b/.github/workflows/release_prepare.yml
@@ -27,6 +27,8 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  # To create labels if needed.
+  issues: write
 
 jobs:
   prepare-release:
