build: fetch history

--- a/.github/workflows/release_prepare.yml
+++ b/.github/workflows/release_prepare.yml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+            fetch-depth: 0  # Fetch all history for accurate changelog generation
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
